--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-preset-env": "^7.8.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
